{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 22,
  "lineage": "9401c5f6-a211-6fb4-f41a-7294497064fe",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:625535193395:security-group/sg-03822d4ecb0058403",
            "description": "Security group for bastion server",
            "filter": [
              {
                "name": "group-name",
                "values": [
                  "dell_demo-bastion-sg"
                ]
              }
            ],
            "id": "sg-03822d4ecb0058403",
            "name": "dell_demo-bastion-sg",
            "tags": {
              "Name": "dell_demo-bastion-sg",
              "Project": "dell_demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-07879d5b414ef83ab"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "selected_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:625535193395:security-group/sg-03d333fea1b972ebe",
            "description": "Security group for standalone vms",
            "filter": [
              {
                "name": "group-name",
                "values": [
                  "dell_demo-standalone-vms-sg"
                ]
              }
            ],
            "id": "sg-03d333fea1b972ebe",
            "name": "dell_demo-standalone-vms-sg",
            "tags": {
              "Name": "dell_demo-standalone-vms-sg",
              "Project": "dell_demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-07879d5b414ef83ab"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b10ea3c63096c7ec",
            "association_id": "eipassoc-03e59206fdee12895",
            "domain": "vpc",
            "id": "eipalloc-0b10ea3c63096c7ec",
            "instance": "i-0783b426febe96572",
            "network_border_group": "us-east-2",
            "network_interface": "eni-04877b5e3cb2d02fa",
            "private_dns": "ip-10-0-0-67.us-east-2.compute.internal",
            "private_ip": "10.0.0.67",
            "public_dns": "ec2-3-12-232-255.us-east-2.compute.amazonaws.com",
            "public_ip": "3.12.232.255",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.bastion_server",
            "aws_subnet.us-east-2a-public",
            "data.aws_security_group.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06d020629b2f84807",
            "association_id": "eipassoc-064a94e52c058e9f8",
            "domain": "vpc",
            "id": "eipalloc-06d020629b2f84807",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0f7130495714156a3",
            "private_dns": "ip-10-0-0-173.us-east-2.compute.internal",
            "private_ip": "10.0.0.173",
            "public_dns": "ec2-18-116-128-213.us-east-2.compute.amazonaws.com",
            "public_ip": "18.116.128.213",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dell_demo_nat_eip",
              "Project": "dell_demo"
            },
            "tags_all": {
              "Name": "dell_demo_nat_eip",
              "Project": "dell_demo"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.dell_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d77c9d87c7e619f9",
            "arn": "arn:aws:ec2:us-east-2:625535193395:instance/i-0783b426febe96572",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0783b426febe96572",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "dell_demo_kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04877b5e3cb2d02fa",
            "private_dns": "ip-10-0-0-67.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.67",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06942d46a175eabc9",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a92a42f1838508df",
            "tags": {
              "Name": "dell_demo_bastion",
              "Project": "dell_demo"
            },
            "tags_all": {
              "Name": "dell_demo_bastion",
              "Project": "dell_demo"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03822d4ecb0058403"
            ]
          },
          "dependencies": [
            "aws_subnet.us-east-2a-public",
            "data.aws_security_group.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:625535193395:internet-gateway/igw-05e8aab9c4d7d0201",
            "id": "igw-05e8aab9c4d7d0201",
            "owner_id": "625535193395",
            "tags": {
              "Project": "dell_demo"
            },
            "tags_all": {
              "Project": "dell_demo"
            },
            "vpc_id": "vpc-07879d5b414ef83ab"
          },
          "dependencies": [
            "aws_vpc.dell_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06d020629b2f84807",
            "association_id": "eipassoc-064a94e52c058e9f8",
            "connectivity_type": "public",
            "id": "nat-0d56682e4e8fe7fe6",
            "network_interface_id": "eni-0f7130495714156a3",
            "private_ip": "10.0.0.173",
            "public_ip": "18.116.128.213",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a92a42f1838508df",
            "tags": {
              "Project": "dell_demo"
            },
            "tags_all": {
              "Project": "dell_demo"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.us-east-2a-public",
            "aws_vpc.dell_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "us-east-2a-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:625535193395:route-table/rtb-0dc62181fb316acf4",
            "id": "rtb-0dc62181fb316acf4",
            "owner_id": "625535193395",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d56682e4e8fe7fe6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Subnet Route Table",
              "Project": "dell_demo"
            },
            "tags_all": {
              "Name": "Private Subnet Route Table",
              "Project": "dell_demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-07879d5b414ef83ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.us-east-2a-public",
            "aws_vpc.dell_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "us-east-2a-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:625535193395:route-table/rtb-0237f1577e4b19a77",
            "id": "rtb-0237f1577e4b19a77",
            "owner_id": "625535193395",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05e8aab9c4d7d0201",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnet Route Table",
              "Project": "dell_demo"
            },
            "tags_all": {
              "Name": "Public Subnet Route Table",
              "Project": "dell_demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-07879d5b414ef83ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.dell_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "us-east-2a-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05fbc68b65ff3dc1f",
            "route_table_id": "rtb-0dc62181fb316acf4",
            "subnet_id": "subnet-036e26391ca0e9141"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.us-east-2a-private",
            "aws_subnet.us-east-2a-private",
            "aws_subnet.us-east-2a-public",
            "aws_vpc.dell_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "us-east-2a-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e2070135e4fb41a",
            "route_table_id": "rtb-0237f1577e4b19a77",
            "subnet_id": "subnet-0a92a42f1838508df"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.us-east-2a-public",
            "aws_subnet.us-east-2a-public",
            "aws_vpc.dell_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:625535193395:security-group/sg-03822d4ecb0058403",
            "description": "Security group for bastion server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03822d4ecb0058403",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh to bastion server",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dell_demo-bastion-sg",
            "name_prefix": "",
            "owner_id": "625535193395",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dell_demo-bastion-sg",
              "Project": "dell_demo"
            },
            "tags_all": {
              "Name": "dell_demo-bastion-sg",
              "Project": "dell_demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-07879d5b414ef83ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dell_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:625535193395:security-group/sg-01769fd406faa79e5",
            "description": "Allow traffic to pass from the private subnet to the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-01769fd406faa79e5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc_nat",
            "name_prefix": "",
            "owner_id": "625535193395",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dell_demo_sg",
              "Project": "dell_demo"
            },
            "tags_all": {
              "Name": "dell_demo_sg",
              "Project": "dell_demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-07879d5b414ef83ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dell_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "standalone_vms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:625535193395:security-group/sg-03d333fea1b972ebe",
            "description": "Security group for standalone vms",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03d333fea1b972ebe",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "incoming traffic to standalone vms",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "ssh from bastion server",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03822d4ecb0058403"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dell_demo-standalone-vms-sg",
            "name_prefix": "",
            "owner_id": "625535193395",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dell_demo-standalone-vms-sg",
              "Project": "dell_demo"
            },
            "tags_all": {
              "Name": "dell_demo-standalone-vms-sg",
              "Project": "dell_demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-07879d5b414ef83ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_server",
            "aws_vpc.dell_demo_vpc",
            "data.aws_security_group.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us-east-2a-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:625535193395:subnet/subnet-036e26391ca0e9141",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036e26391ca0e9141",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "625535193395",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet",
              "Project": "dell_demo"
            },
            "tags_all": {
              "Name": "Private Subnet",
              "Project": "dell_demo"
            },
            "vpc_id": "vpc-07879d5b414ef83ab"
          },
          "dependencies": [
            "aws_vpc.dell_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us-east-2a-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:625535193395:subnet/subnet-0a92a42f1838508df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a92a42f1838508df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "625535193395",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet",
              "Project": "dell_demo"
            },
            "tags_all": {
              "Name": "Public Subnet",
              "Project": "dell_demo"
            },
            "vpc_id": "vpc-07879d5b414ef83ab"
          },
          "dependencies": [
            "aws_vpc.dell_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dell_demo_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:625535193395:vpc/vpc-07879d5b414ef83ab",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-091c77677044e49fb",
            "default_route_table_id": "rtb-0db41f85dd99c7f95",
            "default_security_group_id": "sg-066c2e1959dafe436",
            "dhcp_options_id": "dopt-9bc90ff2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07879d5b414ef83ab",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0db41f85dd99c7f95",
            "owner_id": "625535193395",
            "tags": {
              "Name": "dell_demo_vpc",
              "Project": "dell_demo"
            },
            "tags_all": {
              "Name": "dell_demo_vpc",
              "Project": "dell_demo"
            }
          }
        }
      ]
    }
  ]
}